# binder

./: Cargo.toml  README.MD
binder-sys/: Cargo.toml
binder-sys/include/: android-binder.h  binder.h
binder-sys/scripts/: gen.sh
binder-sys/src/: ffi.rs  lib.rs
examples/: getsvc.rs
scripts/: test.sh
src/: defs.rs  import.rs  lib.rs  parcel.rs  pstate.rs  service.rs  tstate.rs
