[workspace]
members = [".", 'binder-sys']

[package]
name = "binder"
version = "0.1.0"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
log = "0.4.11"
nix = "0.19.1"
thiserror = "1.0.22"
once_cell = "1.5.2"
env_logger = "0.8.2"

sys = { package = "binder-sys", path = "./binder-sys" }